classDiagram
%%    Editable <|--Product
    Product <|--Ticket
    Product <|--Publication
    Publication <|-- Book
    Publication <|-- Magazine
    Magazine <|-- DiscMag
    SaleableItem <|.. Product
    Serializable <|.. Product
    Product <-- CashTill
    Cart "0..*" -- "0..*" Product : contains

    class Product{
        -String productId
    }

    class Cart {
        -List<CartItem> items
        +addItem(CartItem item)
        +getItems()
        +setItems(List<CartItem> items)
        +toString()
        +equals()
        +hashCode()
    }

    class Serializable{
        <<interface>>
    }
    class Ticket{
        +description
        +price
        +sellItem()
    }
%%    class Editable{
%%        <<abstract>>
%%        -Scanner input
%%        +String getInput(String)
%%        +int getInput(int)
%%        +double getInput(double)
%%        +boolean getInput(boolean)
%%        +Date getInput(Date)
%%        +Enum getInput(Enum)
%%        +edit()*
%%        +initialize()*
%%
%%    }
    class Publication{
        <<Abstract>>
        -String title
        -double price
        -int copies
        +getPrice()

        +Publication()
        +Publication(String title, double price, int copies)
        +toString()
        +equals()
        +hashCode()

    }
    class Book{
        -String author
        +edit()
        +initialize()
        +sellItem()

        +Book()
        +Book(String author)
        +Book(String author, String title, double price, int copies)
        +toString()
        +equals()
        +hashCode()

    }
    class Magazine{
        -int orderQty
        -java.util.Date currentIssue

        +Magazine()
        +Magazine(int orderQty, Date currentIssue, String title, double price, int copies)

        +edit()
        +initialize()
        +sellItem()
    }
    class DiscMag{
        -boolean hasDisc
        +edit()
        +initialize()
        +sellItem()

        +DiscMag()
        +DiscMag(boolean, hasDisc, int orderQty, Date currentIssue, String title, double price, int copies)

    }
    class CashTill{
        -double runningTotal
        +CashTill()
        +showTotal()
        +sellItem(SaleableItem item)
    }
    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice()

    }

    %% ===== LAB 2 (JPA ENTITIES) =====
    ProductEntity "0..*" -- "0..*" OrderEntity : items

    class ProductEntity{
        +Long id
    }

    class OrderEntity{
        +Long id
        +LocalDateTime createdAt
        +double totalAmount
    }


